# supervisedGW

./: README.md  setup.cfg  tutorial.ipynb
sGW.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sgw/: SOT_solver.py  __init__.py  sgw.py  sgwnew.py  utils.py
test/Fig_1/: DiskDisk_A_sum_0107.npy  DiskDisk_P_sum_rho_0.2_0107.npy  DiskDisk_Ratio_rho_0.2_0107.npy  Modified_get_cover.ipynb  Plot_two_disks.ipynb  disk_disk_rho_0.3_random_ratio_0107.ipynb
test/Fig_2&3&4/: 3d_P_eta_1.csv  3d_P_eta_1e-2.csv  3d_P_eta_1e-4.csv  3d_P_gamma_0.1_rho_1.csv  3d_P_gamma_0_rho_1.csv  3d_P_gamma_10_rho_1.csv  3d_P_gamma_10_rho_10.csv  3d_P_gamma_1_rho_0.1.csv  Test_SGW_1117_data.ipynb  Test_SGW_1117_gamma_rho.ipynb  plot_standard_eta.ipynb  plot_standard_gamma.ipynb  sgw.py
test/Fig_5/: MVC.ipynb  adjacency_matrix_Balanced.txt  conv.txt  plot_standard.ipynb  toy_balancedMVC_G.txt  toy_balancedMVC_set.txt  toy_balancedP_01.csv  toy_balancedP_02.csv  toy_unbalancedMVC_G.txt  toy_unbalancedP_02.csv
test/Fig_6/: P_octopus_1203_0.05.csv  P_octopus_1203_0.1.csv  P_octopus_1203_0.2.csv  P_octopus_1203_0.5.csv  P_octopus_1203_0.6.csv  P_octopus_1203_0.7.csv  P_octopus_1203_1.0.csv  P_octopus_1203_1.3.csv  P_octopus_1203_1.4.csv  P_octopus_1203_1.5.csv  P_octopus_1203_1.6.csv  P_octopus_1203_2.0.csv  geodesic_C2_1203.csv  highlight_indices_0.05.json  highlight_indices_0.1.json  highlight_indices_0.3.json  highlight_indices_0.4.json  highlight_indices_0.5.json  highlight_indices_1.0.json  highlight_indices_1.1.json  highlight_indices_1.5.json  highlight_indices_1.8.json  (+1 more)
(+196 files in other folders)
