[metadata]
name = sGW
version = 0.0.1
description = Supervised Gromov Wasserstein Optimal Transport
long_description_content_type = text/markdown
long_description = file: README.md
keywords = Gromov-Wasserstein, Elementwise constraits, Entropy regularization
license = MIT License
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    numpy>=1.23.4
    networkx>=3.1
python_requires = >=3.8

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.extras_require]
docs = 
    sphinx==5.3.0
    sphinx-autodoc-typehints==1.18.1
    sphinx-rtd-theme==1.0.0
    sphinx-rtd-size==0.2.0
    sphinxcontrib-applehelp==1.0.2
    sphinxcontrib-devhelp==1.0.2
    sphinxcontrib-htmlhelp==2.0.0
    sphinxcontrib-jsmath==1.0.1
    sphinxcontrib-qthelp==1.0.3
    sphinxcontrib-serializinghtml==1.1.5
    sphinx-mdinclude==0.5.3
    nbsphinx==0.8.9
    ipykernel==6.16.0
    sphinx-gallery==0.11.1

[options.packages.find]
exclude =
    tests*
    docs*
    tutorials*